# marl-cop-thief

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: cloud_auth_proof.txt  cloud_run_log.txt  demo_bonus_game_report.json  demo_cloud_game_report.json  demo_game_report.json  demo_llm_game_report.json  demo_llm_usage.json  llm_run_log.txt
config/: config.json  rate_limits.json
docs/: PLAN.md  PRD.md  PRD_gmail_reporting.md  PRD_mcp_protocol.md  PRD_q_learning.md  PROMPTS.md  TODO.md
notebooks/: results_analysis.ipynb
src/copthief/: __init__.py  main.py
src/copthief/agents/: base_agent.py  llm_client.py  nl_protocol.py  q_learning.py  rewards.py
src/copthief/game/: grid.py  rules.py  scoring.py  state.py
src/copthief/gui/: animation.py  console_view.py
src/copthief/mcp_servers/: cop_server.py  factory.py  thief_server.py
src/copthief/orchestrator/: game_series.py  sub_game.py
src/copthief/reporting/: bonus_demo.py  draft_email.py  gmail_sender.py  json_report.py  send_report.py
src/copthief/research/: harness.py
src/copthief/sdk/: sdk.py
src/copthief/shared/: config.py  constants.py  gatekeeper.py  version.py
tests/: conftest.py
tests/integration/: test_sanity_checks.py
tests/unit/agents/: test_base_agent.py  test_llm_client.py  test_nl_protocol.py  test_q_learning.py  test_rewards.py
tests/unit/game/: test_grid.py  test_rules.py  test_scoring.py  test_state.py
tests/unit/gui/: test_animation.py
tests/unit/mcp_servers/: test_auth.py
tests/unit/orchestrator/: test_sub_game.py
(+10 files in other folders)
