[project]
name = "copthief"
version = "1.00.0"
description = "Dual AI Agent (Cop/Thief) race via MCP servers — ex06, team SMNGRP05"
authors = [{ name = "afaf gharra" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "anthropic>=0.40.0",
    "google-api-python-client>=2.140.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copthief"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/copthief/main.py",
    "src/copthief/gui/*",
    "src/copthief/mcp_servers/cop_server.py",
    "src/copthief/mcp_servers/thief_server.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 85

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
